--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+div.card-header {
+  font-size: large;
+}
+
+div.card {
+  margin-top: 10px;
+}
+
+.table {
+  margin-top: 10px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
