--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -44,16 +44,16 @@
               />
             </td>
             <td>
-              {{ product.productName }}
+              {{ product.productName | uppercase }}
             </td>
             <td>
-              {{ product.productCode }}
+              {{ product.productCode | lowercase }}
             </td>
             <td>
               {{ product.releaseDate }}
             </td>
             <td>
-              {{ product.price }}
+              {{ product.price | currency: 'EUR':'symbol':'1.2-2' | lowercase }}
             </td>
             <td>
               {{ product.starRating }}
